fixed header spacing

--- a/Styles/_home.scss
+++ b/Styles/_home.scss
@@ -34,7 +34,7 @@
         left: 0;
         top: 0;
         width: 100%;
-        padding: 20px;
+        padding: 0;
     }
   
 #header.scrolled {
@@ -44,6 +44,7 @@
 }
 
 .nav-menu{
+    padding: 20px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -99,6 +100,7 @@
             }
         }
         @include xl{
+            justify-content: end;
             flex-direction: row;
             transition: none;
             position: static;
@@ -106,7 +108,9 @@
             height: auto;
             padding: 0;
             .nav-item{
+                margin-left: 0;
                 .nav-link{
+                    font-size: 1rem;
                     color: #FFFFFF;
                     &:hover{
                         color:$blue;
