--- a/Styles/style.css
+++ b/Styles/style.css
@@ -52,7 +52,7 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  padding: 20px;
+  padding: 0;
 }
 
 #header.scrolled {
@@ -62,6 +62,7 @@ body {
 }
 
 .nav-menu {
+  padding: 20px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -118,6 +119,7 @@ body {
 }
 @media (min-width: 1200px) {
   .nav-menu .nav-list {
+    justify-content: end;
     flex-direction: row;
     transition: none;
     position: static;
@@ -125,7 +127,11 @@ body {
     height: auto;
     padding: 0;
   }
+  .nav-menu .nav-list .nav-item {
+    margin-left: 0;
+  }
   .nav-menu .nav-list .nav-item .nav-link {
+    font-size: 1rem;
     color: #FFFFFF;
   }
   .nav-menu .nav-list .nav-item .nav-link:hover {
